Add date aggregation (#3188)
Co-authored-by: Torben Meyer <torben.meyer@bakdata.com>