@@ -1,6 +1,7 @@
 package com.bakdata.conquery.sql.conversion.cqelement.concept;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import com.bakdata.conquery.sql.conversion.model.QueryStep;
 import com.bakdata.conquery.sql.conversion.model.Selects;
@@ -14,7 +15,7 @@ class AggregationSelectCte extends ConceptCte {
 		List<SqlSelect> requiredInAggregationFilterStep = conceptCteContext.allConceptSelects()
 																		   .flatMap(sqlSelects -> sqlSelects.getForAggregationSelectStep().stream())
 																		   .distinct()
-																		   .toList();
+																		   .collect(Collectors.toList());
 
 		Selects aggregationSelectSelects = new Selects(conceptCteContext.getPrimaryColumn(), requiredInAggregationFilterStep);
 
